adding summary class, handlebars library and videos frontend

--- a/web/src/main/resources/templates/questions/view/RatingBlockWithAnswer.hbs
+++ b/web/src/main/resources/templates/questions/view/RatingBlockWithAnswer.hbs
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+<h5>{{questionText}}</h5>
+<p>TODO</p>
+<!--<!DOCTYPE html>
 <html lang="de" xmlns:th="http://www.thymeleaf.org">
 <body>
 <div th:fragment="content">
@@ -8,9 +10,9 @@
     <div th:if="${question.answered}" class="container">
         <div class="row">
             <div class="col ">
-                <!-- Spacer -->
+
             </div>
-            <!-- Column Labels -->
+
             <div th:each="columnLabel : ${question.columnLabels}" class="col">
                 <span th:text="${columnLabel.label}">Column Label</span>
             </div>
@@ -34,3 +36,4 @@
     </div>
 </div>
 </body>
+-->
