--- a/web/src/main/resources/templates/questions/view/SingleChoiceQuestionWithAnswer.hbs
+++ b/web/src/main/resources/templates/questions/view/SingleChoiceQuestionWithAnswer.hbs
@@ -1,3 +1,12 @@
+<h5>{{questionText}}</h5>
+<ul>
+    <li>Lorem ipsum dolor sit amet</li>
+    <li>consetetur sadipscing elitr, sed</li>
+    <li>diam nonumy eirmod tempor</li>
+    <li>invidunt ut labore et dolore magna</li>
+</ul>
+
+<!-- TODO
 <!DOCTYPE html>
 <html lang="de" xmlns:th="http://www.thymeleaf.org">
 <body>
@@ -5,14 +14,18 @@
     <h4 th:text="${question.questionText}">This is a question</h4>
     <small th:if="${question.additionalInfo}" th:text="${question.additionalInfo}">Additional Info</small>
 
-    <div class="form-check" th:each="choice : ${question.choices}">
+    <div class="form-check" th:each="choice : ${question.choices}" th:if="${question.answered}">
         <label class="form-check-label">
             <input class="form-check-input" type="radio"
-                   th:name="${'answer-' + question.id} + '-' + ${question.class.simpleName}"
+                   disabled="disabled"
+                   th:name="${'answer-' + question.id} + '-choice'"
                    th:value="${choice.id}"
                    th:checked="${choice.selected}"
                    th:text="${choice.label}">
         </label>
     </div>
+    <div th:unless="${question.answered}">
+        <p>No answer given.</p>
+    </div>
 </div>
-</body>
+</body>-->
