--- a/demo/src/main/resources/templates/main.hbs
+++ b/demo/src/main/resources/templates/main.hbs
@@ -2,12 +2,7 @@
     <title>Videos Overview</title>
 {{/partial}}
 {{#partial "content"}}
-    <h1>Videos</h1>
-    {{#each videos}}
-        <b>{{title}}</b>
-        <p>{{description}}</p>
-
-    {{/each}}
+    {{> components/video videos}}
 {{/partial}}
 
 {{> layout}}
