--- a/demo/src/main/resources/templates/videos.hbs
+++ b/demo/src/main/resources/templates/videos.hbs
@@ -2,7 +2,9 @@
 {{#this}}
 <li class="media">
     <div class="media-left media-bottom">
-    <img class="d-flex mr-3" src="..." alt="Generic placeholder image" style="width:80px">
+        <a class="d-flex pr-3" href="{{resolveVideoActionLink  action qId uId id}}">
+                <img class="d-flex mr-3" src="..." alt="Generic placeholder image" style="width:80px">
+        </a>
     </div>
     <div class="media-body">
         <h5 class="mt-0 mb-1">{{title}}</h5>
