--- a/web/src/main/resources/templates/questions/view/TextQuestionWithAnswer.hbs
+++ b/web/src/main/resources/templates/questions/view/TextQuestionWithAnswer.hbs
@@ -1,4 +1,7 @@
 <h5>{{questionText}}</h5>
+{{#if additionalInfo}}
+    <small>{{additionalInfo}}</small>
+{{/if}}
 {{#if answerText}}
     <p>{{answerText}}</p>
 {{else}}
