--- a/web/src/main/resources/templates/questions/summary/SingleChoiceSummary.hbs
+++ b/web/src/main/resources/templates/questions/summary/SingleChoiceSummary.hbs
@@ -1,6 +1,6 @@
 <h5>{{questionText}}</h5>
-<div>
-    <!-- TODO for all values -->
+<div class="row single-choice-answer">
+    <div class="arrow-right"></div>
     <span>{{ratingSummary.valueLabel}}</span>
     <span>({{ratingSummary.numRating}})</span>
 </div>
