* added some styling * added dev-tools * excluded database trace from git

--- a/demo/src/main/resources/templates/components/menu.hbs
+++ b/demo/src/main/resources/templates/components/menu.hbs
@@ -6,6 +6,6 @@
         <a class="nav-link" href="#rate" role="tab" data-toggle="tab">Rate</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#summary" role="tab" data-toggle="tab">Summary</a>
+        <a class="nav-link" href="#summary" role="tab" data-toggle="tab">View own Ratings</a>
     </li>
 </ul>
