--- a/demo/src/main/resources/templates/layout.hbs
+++ b/demo/src/main/resources/templates/layout.hbs
@@ -1,15 +1,15 @@
-<!doctype html>
-<html lang="de-DE">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{#block "title"}}
-        <title>Videos</title>
+        <title>Spring Boot Questionnaire Video Rating App</title>
     {{/block}}
-
     <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/custom.css">
     {{#block "css-includes"}}
 
     {{/block}}
@@ -18,18 +18,25 @@
 
     {{/block}}
 
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
+{{> components/header}}
+<div class="container">
+
+    {{#block "content"}}
+        <span>This is the layout. This shouldn't be visible.</span>
+    {{/block}}
+</div>
 
 {{#block "js-includes"}}
     <script src="/js/jquery.min.js"></script>
     <script src="/js/popper.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
 {{/block}}
-{{#block "content"}}
-    <span>This is the layout. This shouldn't be visible.</span>
-{{/block}}
-
-
 </body>
 </html>
