--- a/demo/src/main/resources/templates/main.hbs
+++ b/demo/src/main/resources/templates/main.hbs
@@ -2,15 +2,28 @@
     <title>Videos Overview</title>
 {{/partial}}
 {{#partial "content"}}
+    <section class="jumbotron text-center">
+        <div class="row">
+            <h1 class="jumbotron-heading">Spring Boot Questionnaire Video Rating App</h1>
+        </div>
+    </section>
     {{> components/menu}}
-
     <!-- Tab panes -->
     <div class="tab-content">
-        <div role="tabpanel" class="tab-pane active" id="home">{{> videos ratedVideos  action='view'}}</div>
-        <div role="tabpanel" class="tab-pane" id="rate">{{> videos notRatedVideos  action='rate'}}</div>
-        <div role="tabpanel" class="tab-pane" id="summary">{{> videos allVideos  action='summary'}}</div>
+        <div role="tabpanel" class="tab-pane active" id="home">
+            {{> videos allVideos  action='summary'}}
+        </div>
+        <div role="tabpanel" class="tab-pane" id="rate">
+            {{> videos notRatedVideos  action='rate'}}
+        </div>
+        <div role="tabpanel" class="tab-pane" id="summary">
+            {{> videos ratedVideos  action='view'}}
+        </div>
     </div>
 
+    <div class="footer">
+        <div>Icons made by <a href="https://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+    </div>
 {{/partial}}
 
 {{> layout}}
